<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityContacto">

    <include android:id="@+id/miActionBar2"
        layout="@layout/actionbar2"
        ></include>

    <TextView
        android:id="@+id/tvContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_contacto"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/eTNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="16"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="29dp"
        />

    <EditText
        android:id="@+id/eTMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="16"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="29dp"
        />

    <EditText
        android:id="@+id/eTDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="89dp"
        android:layout_gravity="center_horizontal"
        android:ems="16"
        android:hint="@string/descripcion"
        android:inputType="textMultiLine"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="80dp" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/enviar"
            android:textAlignment="center"
            android:layout_marginBottom="0dp"
            android:gravity="bottom|end" />
    </RelativeLayout>


</LinearLayout>