<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAbout"
    android:orientation="vertical">

    <include android:id="@+id/miActionBar2"
        layout="@layout/actionbar2"
        ></include>

    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_about"
        android:inputType="textMultiLine"
        android:textStyle="bold"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="9dp"
        android:textSize="@dimen/titulo_app"
        />

    <TextView
        android:id="@+id/tvAbout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_about1"
        android:textStyle="italic"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="@dimen/nombre_cardview"
        />

    <TextView
        android:id="@+id/tvAbout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/texto_about2"
        android:inputType="textMultiLine"
        android:textStyle="normal"
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/tvAbout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_about3"
        android:inputType="textMultiLine"
        android:layout_marginTop="12dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:textStyle="italic"
        android:textSize="@dimen/nombre_cardview"
        />
</LinearLayout>